--- a/src/app/components/add-job/add-job.component.html
+++ b/src/app/components/add-job/add-job.component.html
@@ -1,2 +1,4 @@
-<a [routerLink]="['/my-jobs/create']" class="add-job">+</a>
+<div class="add">
+  <a [routerLink]="['/my-jobs/create']" class="add-job">+</a>
+</div>
 
