--- a/src/app/components/archived-job/archived-job.component.html
+++ b/src/app/components/archived-job/archived-job.component.html
@@ -3,7 +3,7 @@
     {{job.position}}
   </div>
   <div class="archived-options">
-    <span (click)="handleUnarchiveClick(job._id)">Unarchive</span>
-    <img src="/assets/img/delete-cross.png" alt="Delete Job" (click)="handleDeleteClick(job._id)" />
+    <img src="/assets/img/reply.png" alt="Unarchive Job" (click)="handleUnarchiveClick(job._id)" />    
+    <img src="/assets/img/trash.png" alt="Delete Job" (click)="handleDeleteClick(job._id)" />
   </div>
 </div>
