--- a/src/app/pages/candidate-page/candidate-page.component.html
+++ b/src/app/pages/candidate-page/candidate-page.component.html
@@ -3,15 +3,18 @@
 <div *ngIf="!user">Loading ...</div>
 <div *ngIf="user">
   <div class="form-button">
-    <button>Message</button>
+    <button class="flex">
+      <img src="/assets/img/envelope.png" class="ico"/>
+      <span>Message</span>
+    </button>
   </div>
   <h3>Application Status:</h3>
   <div class="desc-box">
     <div class="form-button btn-status">
-      <button (click)="rejectCandidate(jobId, userId)">Reject</button>
+      <button (click)="acceptCandidate(jobId, userId)" class="accept">Accept</button>
     </div>
     <div class="form-button btn-status">
-      <button (click)="acceptCandidate(jobId, userId)">Accept</button>
+      <button (click)="rejectCandidate(jobId, userId)" class="reject">Reject</button>
     </div>
   </div>
 </div>
