--- a/src/app/components/add-job/add-job.component.css
+++ b/src/app/components/add-job/add-job.component.css
@@ -1,3 +1,8 @@
+.add{
+  position: fixed;
+  right: 20px;
+  bottom: 55px;
+}
 .add-job{
   display: block;
   width: 75px;
@@ -9,8 +14,11 @@
   font-size: 45px;
   text-decoration: none;
   color: #f5f5f5;
-  background: #024f7c;
-  position: fixed;
-  right: 20px;
-  bottom: 55px;
+  background: #1371A7;
+  box-shadow: 2px 2px 3px rgba(0,0,0,.4);
+}
+.add-job:active{
+  box-shadow: none;
+  position: relative;
+  top: 1px;
 }
