--- a/src/app/pages/jobs/jobs.component.html
+++ b/src/app/pages/jobs/jobs.component.html
@@ -14,7 +14,7 @@
   <div *ngFor="let job of jobs | filter:'position':pattern">
     <app-job-card [job]="job"></app-job-card>
   </div>
-  <div *ngIf="jobs.length === 0" class="job-item">
-    No job offers yet.
+  <div *ngIf="!jobs.length" class="empty-list">
+    <app-empty-list></app-empty-list>
   </div>
 </div>
